[package]
authors = ["Dipankar dipankarmedhi11@gmail.com"]
edition = "2021"
license = "MIT"
name = "chunkr"
version = "0.1.17"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "A fast and quick chunking library for rust"

[dependencies]
lopdf = {version = "0.32.0", features = ["pom", "pom_parser"]}
serde = {version = "1.0.202", features = ["derive"]}
serde_json = "1.0.117"

[lib]
name = "chunkr"
path = "src/lib.rs"
